@@ -18,7 +18,7 @@
 <?php
 foreach($this->tableSchema->columns as $column)
 {
-	if($column->isPrimaryKey)
+	if($column->autoIncrement)
 		continue;
 ?>
 	<div class="row">
